sparkscope_web/static/css/styles.css
html {
    height: 99.99%;
}

body {
    padding-top: 50px;
    font-family: 'Raleway', sans-serif;
    height: 99.99%;
    position: relative;
}

.left-menu {
    background-color: #f6f6f6;
    border: 1px solid black;
    padding: 20px;
    width: 350px;
    float: left;
    height: 100%;
    overflow-y: auto;
}

.left-menu .form-group {
    margin-bottom: 20px;
    width: 100%;
}

.left-menu .form-control {
    width: 100%;
}

.form-group {
    display: block;
}

.subform {
    padding-left: 7%;
    margin-bottom: 10px;
}

.navbar {
    position: relative;
    margin-bottom: 0px;
}

.apps-container {
    background-color: #f6f6f6;
    float: left;
    height: 100%;
    width: auto;
    overflow-y: auto;
    flex-grow: 1;
    padding: 20px 0px;
    display: flex;
    flex-direction: column;
}

.fixed-top {
    position: fixed;
}

.main-page-wrapper {
    display: flex;
    flex-direction: row;
    height: 100%;
}

.app-box {
    display: flex;
    flex-direction: row;
    border-top: 1px solid #cccccc;
    border-bottom: 1px solid #cccccc;
    border-left: 10px solid;
    margin-top: -1px;
    padding: 10px;
    position: relative;
}

.app-box-app-id-col {
    flex-basis: 300px;
}

.app-box-app-name-col {
}

.app-box-user-col {
    flex-basis: 150px;
    margin-left: auto;
}

.app-box-time-col {
    flex-basis: 300px;
    text-align: right;
    margin-left: 0px;
}

.metrics-indicator-grp {
    position: absolute;
    bottom: 20px;
}

.metrics-indicator {
    padding: 10px;
    border-radius: 10px;
    color: #ffffff;
    font-weight: bold;
    text-align: center;
    width: 200px;
    display: inline;
}

.error-container {
    position: absolute;
    top: 60px;
    left: 360px;
    width: 600px;
    z-index: 999;
}

.alert {
    width: 100%
}

.compare-grid-container h4, .app-grid-container h4 {
    font-size: 18px;
    font-weight: bold;
}

.compare-start-end-container {
    display: flex;
    justify-content: space-between;
}

.compare-start-end {
    flex-grow: 1;
}

.card-container {
    display: flex;
    flex-wrap: wrap;
}

.card-4-cols {
    flex-basis: 25%;
}

.basic-metric-name {
    color: #aaaaaa;
}

.basic-metric-value {
    color: #000000;
    font-weight: bold;
}

.issue-container {
    display: flex;
    align-items: flex-start;
    margin-bottom: 20px;
}

.metrics-description {
    padding: 10px;
    margin-left: 30px;
}

.compare-grid-container, .app-grid-container {
    display: grid;
    grid-template-rows: auto auto auto auto auto;
    float: left;
    width: auto;
    position: relative;
    overflow-y: auto;
    grid-column-gap: 40px;
    grid-row-gap: 40px;
    padding: 20px;
    background-color: #f6f6f6;
    flex-grow: 1;
}

.compare-grid-container {
    grid-template-columns: auto auto;
}

.app-grid-container {
    grid-template-columns: auto;
}

.col-1-row-1 {grid-row: 1; grid-column: 1;}
.col-1-row-2 {grid-row: 2; grid-column: 1;}
.col-1-row-3 {grid-row: 3; grid-column: 1;}
.col-1-row-4 {grid-row: 4; grid-column: 1;}
.col-1-row-5 {grid-row: 5; grid-column: 1;}
.col-1-row-6 {grid-row: 6; grid-column: 1;}
.col-2-row-1 {grid-row: 1; grid-column: 2;}
.col-2-row-2 {grid-row: 2; grid-column: 2;}
.col-2-row-3 {grid-row: 3; grid-column: 2;}
.col-2-row-4 {grid-row: 4; grid-column: 2;}
.col-2-row-5 {grid-row: 5; grid-column: 2;}

.null-message {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translateX(-50%);
    color: #cccccc;
}

.breadcrumb {
    background-color: transparent;
}

